--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -34,7 +34,7 @@
 											<ion-icon name='chatbubble-outline'></ion-icon>
 										</span>
 									</span>
-									<span class='article_submit_time'>
+									<span class='datetime_span'>
 										<%= art.published_time %>
 										<span class='icon'>
 											<ion-icon name='calendar-outline'></ion-icon>
