--- a/app/views/search/q.html.erb
+++ b/app/views/search/q.html.erb
@@ -12,11 +12,62 @@
                 </div>
             <% end %>
         </div>
-        <% if @search_result != nil %>
-            <% @search_result.each do |s| %>
-                <h1><%= s["header"] %></h1> <br>
+         <% if @search_result != nil %>
+            <% if @search_result.length > 0 %>
+                <div class="listed_cards">
+                    <% @search_result.each do |i| %>
+                    <%= i.class.table_name %>
+                        <% if i.image %>  
+                            <a href="/<%= i.class.table_name %>/show/<%= i.slug %>">
+                                <div class='card_box'>
+                                    <div class='image cover'>
+                                        <%= image_tag i.image.url %>
+                                    </div>
+                                    <h3 class='title'><%= i.header %></h3>
+                                    <p class='desc'><%= i.cover_text[0, 120] %>...</p>
+                                    <div class='footer' style='display: flex; justify-content: space-between' dir='ltr'>
+                                        <div>
+                                            <span class='author'>
+                                                <%= i.user.full_name %>
+                                                <span class='icon'>
+                                                    <ion-icon name='person-outline'></ion-icon>
+                                                </span>
+                                            </span>
+                                        </div>
+                                        <div>
+                                            <span class="footer_icon link-danger" dir="ltr">
+                                                <span class='icon'>
+                                                    <ion-icon name='heart'></ion-icon>
+                                                </span>
+                                                <%= i.likes.length %>
+                                            </span>
+                                            <span class='comments_count'>
+                                                <%= i.comments.length %>
+                                                <span class='icon'>
+                                                    <ion-icon name='chatbubble-outline'></ion-icon>
+                                                </span>
+                                            </span>
+                                            <span class='datetime_span'>
+                                                <%= i.published_time %>
+                                                <span class='icon'>
+                                                    <ion-icon name='calendar-outline'></ion-icon>
+                                                </span>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        <% end %>
+                    <% end %>
+                </div>
+            <% else %>
+                <span style='color: #777; font-size: 14px; width: 100%; display: block; text-align: center; padding: 20px 0'>چیزی پیدا نشد.</span>
             <% end %>
-        <% end %>
+        <% else %>
+            <div style="width: 100%; display: block; margin: 90px 0; text-align: center">
+                <%= image_tag '/images/search.svg', :style => 'width: 400px;', :alt => "search" %>
+            </div>
+        <% end %> 
     </div>
 </div>
 
