--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -62,7 +62,7 @@
                                 <% end %>
                             <% else %>
                                 <div class="sepa"></div>
-                                <a href="/courses/videos/show">
+                                <a href="/courses/videos/<%= @course.slug %>">
                                     <button href="" class="btn btn-primary btn-block">مدیریت ویدیو ها</button>
                                 </a>
                             <% end %>
