--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -14,6 +14,21 @@
 		font-size: 24px;
 		margin-bottom: 20px;
 	}
+	.header{
+        font-size: 17px;
+        width: 100%;
+        display: block;
+        color: rgb(85, 85, 85);
+		&.large_header{
+			font-size: 20px;
+		}
+    }
+	&.low_shadow{
+		box-shadow: 0px 0px 0px 5px rgba(255, 255, 255, 0.5);
+	}
+	&.low_radius{
+		border-radius: 7px;
+	}
 }
 .center_form{
 	position: relative;
