--- a/app/views/introduction/index.html.erb
+++ b/app/views/introduction/index.html.erb
@@ -7,7 +7,7 @@
     </div>
 
     <%= form_with url: '/search/submit_q', method: :post do |f| %>
-        <div class="search-search-box">
+        <div class="search-box">
             <div class="input input-bold">
                 <%= f.text_field :search_q, :placeholder => "جست و جو کنید!" %>
                 <button type="submit" class="submit-button">
