--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -1,3 +1,5 @@
+$radius: 6px;
+
 .table {
   font-family: 'Poppins', 'Samim';
   border-collapse: collapse;
@@ -5,7 +7,7 @@
   margin-top: 10px;
   text-align: right;
   direction: rtl;
-  border-radius: 4px;
+  border-radius: $radius;
   overflow: scroll;
   .link, .link:hover{
     cursor: pointer;;
@@ -19,14 +21,15 @@
   }
   td, th{
     padding: 8px;
+    padding-right: 18px;
   }
   tr{
     &:last-child td{
       &:first-child{
-        border-bottom-right-radius: 4px;
+        border-bottom-right-radius: $radius;
       }
       &:last-child{
-        border-bottom-left-radius: 4px;
+        border-bottom-left-radius: $radius;
       }
     }
   }
@@ -36,10 +39,12 @@
     background-color: #252b33;
     color: white;
     &:first-child{
-      border-top-right-radius: 4px;
+      border-top-right-radius: $radius;
+      border-bottom-right-radius: $radius;
     }
     &:last-child{
-      border-top-left-radius: 4px;
+      border-top-left-radius: $radius;
+      border-bottom-left-radius: $radius;
     }
   }
 }
