--- a/app/views/search/q.html.erb
+++ b/app/views/search/q.html.erb
@@ -2,7 +2,7 @@
     <div class="content">
         <div dir="rtl">
             <%= form_with url: '/search/submit_q', method: :post do |f| %>
-                 <div class="search-search-box default-color">
+                 <div class="search-box default-color">
                     <div class="input">
                         <%= f.text_field :search_q, :placeholder => "جست و جو کنید!" %>
                         <button class="submit-button">
