--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -62,6 +62,9 @@
                                 <% end %>
                             <% else %>
                                 <div class="sepa"></div>
+                                <a href="/courses/videos/new_episode/<%= @course.slug %>">
+                                    <button href="" class="btn btn-primary btn-block" style="margin-bottom: 5px;">ویدیو جدید</button>
+                                </a>
                                 <a href="/courses/videos/<%= @course.slug %>">
                                     <button href="" class="btn btn-primary btn-block">مدیریت ویدیو ها</button>
                                 </a>
