--- a/app/views/dashboard/general_statistics.html.erb
+++ b/app/views/dashboard/general_statistics.html.erb
@@ -79,7 +79,7 @@
                 تعداد لایک ها
             </h4>
             <span class="value">
-                <%= @likes.all.length %>
+                <%= @article_likes.all.length %>
             </span>
         </div>
         <div class="card-box">
