--- a/app/views/dashboard/my_articles.html.erb
+++ b/app/views/dashboard/my_articles.html.erb
@@ -32,7 +32,7 @@
 										<span class='icon'>
 											<ion-icon name='heart'></ion-icon>
 										</span>
-										<%= art.likes.length %>
+										<%= art.article_likes.length %>
 									</span>
 									<span class='comments_count'>
 										<%= art.comments.length %>
