--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,47 +4,7 @@
 		<% if @articles.length > 0 %>
 		<div class="listed_cards">
 		    <% @articles.each do |art| %>
-		    	<% if art.image.present? %>
-					<a href="/articles/show/<%= art.slug %>">
-						<div class='card_box'>
-							<div class='image cover'>
-								<%= image_tag art.image.url %>
-							</div>
-							<h3 class='title'><%= art.header %></h3>
-							<p class='desc'><%= art.cover_text[0, 120] %>...</p>
-							<div class='footer' style='display: flex; justify-content: space-between' dir='ltr'>
-								<div>
-									<span class='author'>
-										<%= art.user.full_name %>
-										<span class='icon'>
-											<ion-icon name='person-outline'></ion-icon>
-										</span>
-									</span>
-								</div>
-								<div>
-									<span class="footer_icon link-danger" dir="ltr">
-										<span class='icon'>
-											<ion-icon name='heart'></ion-icon>
-										</span>
-										<%= art.article_likes.length %>
-									</span>
-									<span class='comments_count'>
-										<%= art.comments.length %>
-										<span class='icon'>
-											<ion-icon name='chatbubble-outline'></ion-icon>
-										</span>
-									</span>
-									<span class='datetime_span'>
-										<%= art.published_time %>
-										<span class='icon'>
-											<ion-icon name='calendar-outline'></ion-icon>
-										</span>
-									</span>
-								</div>
-							</div>
-						</div>
-					</a>
-				<% end %>
+		    	<%= render 'articles/article_card', art: art, show_publish_banner: false %>
 			<% end %>
 		</div>
 		<% else %>
