--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -4,43 +4,7 @@
 		<% if @courses.length > 0 %>
 		<div class="listed_cards">
 			<% @courses.each do |co| %>
-				<% if co.image.present? %>
-					<a href="/courses/show/<%= co.slug %>">
-						<div class='card_box'>
-							<div class='image cover'>
-								<%= image_tag co.image.url %>
-							</div>
-							<h3 class='title'><%= co.header %></h3>
-							<p class='desc'><%= co.cover_text[0, 120] %>...</p>
-							<div class='footer' style='display: flex; justify-content: space-between' dir='ltr'>
-								<div>
-									<span class='author'>
-										<%= co.user.full_name %>
-										<span class='icon'>
-											<ion-icon name='person-outline'></ion-icon>
-										</span>
-									</span>
-								</div>
-								<div>
-									<span class="footer_icon link-danger" dir="ltr">
-										<span class='icon'>
-											<ion-icon name="book-outline"></ion-icon>
-										</span>
-										<span style="margin-right: 3px;">
-											<%= co.users.where("is_admin=false").length %>
-										</span>
-									</span>
-									<span class='coicle_submit_time'>
-										<%= co.published_time %>
-										<span class='icon'>
-											<ion-icon name='calendar-outline'></ion-icon>
-										</span>
-									</span>
-								</div>
-							</div>
-						</div>
-					</a>
-				<% end %>
+				<%= render 'courses/course_card', co: co, show_publish_banner: false %>
 			<% end %>
 		</div>
 		<% else %>
