--- a/app/views/dashboard/my_courses.html.erb
+++ b/app/views/dashboard/my_courses.html.erb
@@ -3,46 +3,7 @@
 		<% if @my_courses.length > 0 %>
 		<div class="listed_cards mini_list">
 		    <% @my_courses.each do |co| %>
-		    	<% if co.image.present? %>
-					<a href="/courses/show/<%= co.slug %>">
-						<div class='card_box'>
-							<% if co.published? %>
-								<span class="hashtag hashtag-primary">(منتشر شده)</span>
-							<% else %>
-								<span class="hashtag hashtag-red">(منتشر نشده)</span>
-							<% end %>
-							<div class='image cover big_cover'>
-								<%= image_tag co.image.url %>
-							</div>
-							<h3 class='title'><%= co.header %></h3>
-							<p class='desc'><%= co.cover_text[0, 120] %>...</p>
-                            <div class='footer' style='display: flex; justify-content: space-between' dir='ltr'>
-                                <div>
-                                    <span class='author'>
-                                        <%= co.user.full_name %>
-                                        <span class='icon'>
-                                            <ion-icon name='person-outline'></ion-icon>
-                                        </span>
-                                    </span>
-                                </div>
-                                <div>
-                                    <span class="footer_icon link-danger" dir="ltr">
-                                        <span class='icon'>
-                                            <ion-icon name="book-outline"></ion-icon>
-                                        </span>
-                                        <span style="margin-right: 3px;">0</span>
-                                    </span>
-                                    <span class='coicle_submit_time'>
-                                        <%= co.published_time %>
-                                        <span class='icon'>
-                                            <ion-icon name='calendar-outline'></ion-icon>
-                                        </span>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-					</a>
-				<% end %>
+                <%= render 'courses/course_card', co: co, show_publish_banner: true %>
 			<% end %>
 		</div>
 		<% else %>
