--- a/app/views/dashboard/new_course.html.erb
+++ b/app/views/dashboard/new_course.html.erb
@@ -43,7 +43,7 @@
 
                 <div style="width: 100%; display: block; margin-top: 20px">
                     <%= link_to "نمایش دوره", '/courses/show/' + slug, :class => 'btn btn-primary' %>
-                    <%= link_to "ویدیو ها", '/courses/videos/show/', :class => 'btn btn-primary btn-large-padding' %>
+                    <%= link_to "ویدیو ها", '/courses/videos/' + slug, :class => 'btn btn-primary btn-large-padding' %>
                 </div>
             </div>
         </div>
