--- a/app/assets/stylesheets/progress_bars.scss
+++ b/app/assets/stylesheets/progress_bars.scss
@@ -4,11 +4,11 @@
     background: #f1f1f1;
     border-radius: 50px;
     .progress-bar{
-        width: 100%;
         background: #003cff;
         border-radius: 50px;
         text-align: center;
         color: #fff;
         font-size: 13px;
+        transition: 0.3s ease;
     }
 }
